--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,13 +7,8 @@ body {
   background-image: url("@assets/img/background.png");
   background-size: cover; /* Scale the background image to be as large as possible */
   background-repeat: no-repeat; /* Prevent the background image from repeating */
-  background-position: initial; /* Center the background image */
+  background-position: left-top; /* Center the background image */
+  background-attachment: fixed;
   height: 90vh; /* Full viewport height */
   width: 100%; /* Full width */
-}
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
 }
