refactor: Update scrollbar styles in globals.css
This commit updates the scrollbar styles in the globals.css file. It adds custom styles for Webkit browsers (Chrome, Safari) and Firefox, improving the visual appearance and user experience of the scrollbars. The changes include setting the width and height of the scrollbar, defining the background color of the scrollbar track and thumb, adding rounded corners to the scrollbar thumb, and changing the background color when hovered. These modifications enhance the overall design and usability of the application.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,3 +12,28 @@ body {
   height: 90vh; /* Full viewport height */
   width: 100%; /* Full width */
 }
+
+/* For Webkit browsers (Chrome, Safari) */
+::-webkit-scrollbar {
+  width: 1px; /* Width of the scrollbar */
+  height: 1px; /* Height of the scrollbar */
+}
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1; /* Color of the scrollbar track */
+}
+
+::-webkit-scrollbar-thumb {
+  background: #ffcfcf; /* Color of the scrollbar thumb */
+  border-radius: 1px; /* Rounded corners for the scrollbar thumb */
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #ffb2b2; /* Color when hovered */
+}
+
+/* For Firefox */
+* {
+  scrollbar-width: none; /* Makes the scrollbar thin */
+  scrollbar-color: #ff9696 #f1f1f1; /* Thumb and track color */
+}
