--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -34,6 +34,55 @@ body {
 
 /* For Firefox */
 * {
-  scrollbar-width: none; /* Makes the scrollbar thin */
+  scrollbar-width: thin; /* Makes the scrollbar thin */
   scrollbar-color: #ff9696 #f1f1f1; /* Thumb and track color */
+}
+
+/* Custom keyframes for the background color transition */
+@keyframes bgColorTransitionGreen {
+  0% {
+    background-color: #ffffff;
+  }
+  100% {
+    background-color: #22c55e;
+    color: #f1f1f1;
+  } /* green-500 */
+}
+
+@keyframes bgColorTransitionRed {
+  0% {
+    background-color: #ffffff;
+  }
+  100% {
+    color: #f1f1f1;
+    background-color: #b91c1c;
+  } /* red-700 */
+}
+
+.animated-bg-green {
+  animation: bgColorTransitionGreen 0.5s forwards;
+}
+
+.animated-bg-red {
+  animation: bgColorTransitionRed 0.5s forwards;
+}
+
+@keyframes bounce {
+  0%,
+  20%,
+  50%,
+  80%,
+  100% {
+    transform: translateY(0);
+  }
+  40% {
+    transform: translateY(-30px);
+  }
+  60% {
+    transform: translateY(-15px);
+  }
+}
+
+.bouncing-element {
+  animation: bounce 2s infinite;
 }
