refactor: Update background color transition in globals.css
This commit updates the background color transition in the globals.css file. It changes the initial background color from #ffffff to #ff7e9e and the final background color from #22c55e to #ff7e9e. This modification enhances the visual appearance and user experience of the application.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -41,7 +41,7 @@ body {
 /* Custom keyframes for the background color transition */
 @keyframes bgColorTransitionGreen {
   0% {
-    background-color: #ffffff;
+    background-color: #ff7e9e;
   }
   100% {
     background-color: #22c55e;
@@ -51,7 +51,7 @@ body {
 
 @keyframes bgColorTransitionRed {
   0% {
-    background-color: #ffffff;
+    background-color: #ff7e9e;
   }
   100% {
     color: #f1f1f1;
