--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,7 +4,7 @@
 
 body {
   /* background: radial-gradient(circle, #ede1d5 28%, #ed7e7e 86%); */
-  background-image: url("@assets/img/background.png");
+  background-image: url("../../public/assets/img/background.png");
   background-size: cover; /* Scale the background image to be as large as possible */
   background-repeat: no-repeat; /* Prevent the background image from repeating */
   background-position: top, center; /* Center the background image */
