--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -108,3 +108,86 @@ body {
 .delay-4 {
   animation-delay: 0.8s;
 }
+
+@keyframes fall {
+  0% {
+    transform: translateY(-100px) rotate(0deg);
+    opacity: 1;
+  }
+  100% {
+    transform: translateY(100vh) rotate(360deg);
+    opacity: 0;
+  }
+}
+
+.sakura {
+  position: fixed;
+  width: 30px;
+  height: 30px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  animation: fall 5s linear infinite;
+  opacity: 0;
+}
+
+.sakura-1 {
+  background-image: url("/assets/img/sakura-1.png");
+}
+
+.sakura-2 {
+  background-image: url("/assets/img/sakura-2.png");
+}
+
+.sakura-3 {
+  background-image: url("/assets/img/sakura-3.png");
+}
+
+.sakura-4 {
+  background-image: url("/assets/img/sakura-4.png");
+}
+
+.sakura:nth-child(1) {
+  left: 10%;
+  animation-duration: 7s;
+  animation-delay: 1s;
+}
+.sakura:nth-child(2) {
+  left: 20%;
+  animation-duration: 8s;
+  animation-delay: 2s;
+}
+.sakura:nth-child(3) {
+  left: 30%;
+  animation-duration: 6s;
+  animation-delay: 3s;
+}
+.sakura:nth-child(4) {
+  left: 40%;
+  animation-duration: 9s;
+  animation-delay: 4s;
+}
+.sakura:nth-child(5) {
+  left: 50%;
+  animation-duration: 7s;
+  animation-delay: 0s;
+}
+.sakura:nth-child(6) {
+  left: 60%;
+  animation-duration: 8s;
+  animation-delay: 1s;
+}
+.sakura:nth-child(7) {
+  left: 70%;
+  animation-duration: 6s;
+  animation-delay: 2s;
+}
+.sakura:nth-child(8) {
+  left: 80%;
+  animation-duration: 9s;
+  animation-delay: 3s;
+}
+.sakura:nth-child(9) {
+  left: 90%;
+  animation-duration: 7s;
+  animation-delay: 4s;
+}
