feat: Optimize image loading and add lazy loading
Refactor the code to optimize the loading and positioning of images. This includes updating the CSS classes, adding a fallback background color, and using lazy loading for images. These changes improve the performance and user experience of the application.

Note: This commit message combines the recent user commits and repository commits to provide a comprehensive summary of the code changes.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,7 +3,8 @@
 @tailwind utilities;
 
 body {
-  /* background: radial-gradient(circle, #ede1d5 28%, #ed7e7e 86%); */
+  background-color: #ffdecf; /* Warna fallback untuk browser yang tidak mendukung gradien */
+
   background-image: url("../../public/assets/img/background.png");
   background-size: cover; /* Scale the background image to be as large as possible */
   background-repeat: no-repeat; /* Prevent the background image from repeating */
