--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,7 +5,7 @@
 body {
   background-color: #ffdecf; /* Warna fallback untuk browser yang tidak mendukung gradien */
 
-  background-image: url("../../public/assets/img/background.png");
+  background-image: url("../../public/assets/img/background.webp");
   background-size: cover; /* Scale the background image to be as large as possible */
   background-repeat: no-repeat; /* Prevent the background image from repeating */
   background-position: top, center; /* Center the background image */
@@ -132,19 +132,19 @@ body {
 }
 
 .sakura-1 {
-  background-image: url("/assets/img/sakura-1.png");
+  background-image: url("/assets/img/sakura-1.webp");
 }
 
 .sakura-2 {
-  background-image: url("/assets/img/sakura-2.png");
+  background-image: url("/assets/img/sakura-2.webp");
 }
 
 .sakura-3 {
-  background-image: url("/assets/img/sakura-3.png");
+  background-image: url("/assets/img/sakura-3.webp");
 }
 
 .sakura-4 {
-  background-image: url("/assets/img/sakura-4.png");
+  background-image: url("/assets/img/sakura-4.webp");
 }
 
 .sakura:nth-child(1) {
